--- a/index.html
+++ b/index.html
@@ -1,70 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MediaTek86 - Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>MediaTek86 Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    "
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <h1>MediaTek86 - Управление персоналом и отсутствиями</h1>
-    </header>
-    <main>
-      <section>
-        <h2>Описание проекта</h2>
+    <div class="container mt-5">
+      <header class="mb-5 text-center">
+        <h1>MediaTek86 - Gestion du personnel et des absences</h1>
+      </header>
+
+      <section id="description" class="mb-5">
+        <h2>Description du projet</h2>
         <p>
-          Проект MediaTek86 представляет собой настольное приложение для управления персоналом и их
-          отсутствиями в медиатеке. Приложение разработано на языке C# с использованием базы данных
-          MySQL. Оно позволяет добавлять, редактировать и удалять записи о сотрудниках и их
-          отсутствиях, а также предоставляет удобный интерфейс для взаимодействия с базой данных.
+          Le projet MediaTek86 est une application de bureau pour la gestion du personnel et de
+          leurs absences dans la médiathèque. L'application est développée en C# avec une base de
+          données MySQL. Elle permet d'ajouter, de modifier et de supprimer des enregistrements sur
+          les employés et leurs absences, tout en offrant une interface utilisateur conviviale pour
+          interagir avec la base de données.
         </p>
       </section>
-      <section>
-        <h2>Цели проекта</h2>
+
+      <section id="goals" class="mb-5">
+        <h2>Objectifs du projet</h2>
         <ul>
-          <li>Создание удобного интерфейса для управления данными о персонале.</li>
-          <li>Реализация функций добавления, редактирования и удаления записей.</li>
+          <li>Créer une interface conviviale pour gérer les données du personnel.</li>
           <li>
-            Управление отсутствиями сотрудников с возможностью добавления и редактирования
-            информации.
+            Implémenter des fonctionnalités pour ajouter, modifier et supprimer des enregistrements.
+          </li>
+          <li>
+            Gérer les absences des employés avec la possibilité d'ajouter et de modifier des
+            informations.
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Ссылки на ресурсы</h2>
+
+      <section id="resources" class="mb-5">
+        <h2>Liens vers les ressources</h2>
         <ul>
-          <li><a href="https://github.com/your_username/mediatek86">Репозиторий на GitHub</a></li>
+          <li><a href="https://github.com/IlyaRadu/MediaTek86" target="_blank">Dépôt GitHub</a></li>
           <li>
-            <a href="https://github.com/your_username/mediatek86/blob/main/database.sql"
-              >Скрипт SQL базы данных</a
+            <a
+              href="https://github.com/IlyaRadu/MediaTek86/blob/main/MediaTek86/database.sql"
+              target="_blank"
+              >Script SQL de la base de données</a
             >
           </li>
-          <li><a href="https://www.youtube.com/watch?v=your_video_link">Видео демонстрация</a></li>
           <li>
-            <a href="https://github.com/your_username/mediatek86/blob/main/Report.pdf"
-              >Отчет о выполненной работе</a
+            <a
+              href="https://github.com/IlyaRadu/MediaTek86/blob/documentation/documentation.txt"
+              target="_blank"
+              >La documentation</a
             >
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Видео демонстрация</h2>
-        <p>В этом видео показаны основные функции приложения MediaTek86:</p>
-        <ul>
-          <li>Добавление, редактирование и удаление записей о персонале.</li>
-          <li>Просмотр и управление отсутствиями сотрудников.</li>
-        </ul>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/your_video_link"
-          frameborder="0"
-          allowfullscreen></iframe>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2024 Ваше Имя</p>
-    </footer>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
