--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
               >La documentation</a
             >
           </li>
+          <li>
+            <a
+              href="https://www.dropbox.com/scl/fi/beoeufldgzu4wdhvixsfd/Video_Documentation.mp4?rlkey=bf3wbh4goppkgj17qhva5y5ya&st=zhsbj9rh&dl=0"
+              target="_blank"
+              >Video</a
+            >
+          </li>
         </ul>
       </section>
     </div>
